# rag-bencher

./: .cirun.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  RELEASE.md  bench.py  bench_many.py  pyproject.toml  run.py
.github/: release-drafter.yml
.github/workflows/: _build.yml  _cloud_aws.yml  _cloud_azure.yml  _cloud_gcp.yml  _coveralls.yml  _gpu.yml  _lint-type-check.yml  _unit_offline.yml  ci.yml  cloud_aws.yml  cloud_azure.yml  cloud_gcp.yml  lint-type-check.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  release-drafter.yml  release-test.yml  release.yml  update-changelog.yml
configs/: wiki.yaml
docker/: gpu-tests.Dockerfile
docs/: architecture.md  configuration.md  gcp-gpu-runner.md
examples/: __init__.py  compare_two_pipelines.py  quickstart.ipynb
examples/data/: sample.txt
rag_bench/: __init__.py  bench_cli.py  bench_many_cli.py  cli.py  config.py
rag_bench/eval/: dataset_loader.py  metrics.py  report.py
rag_bench/eval/datasets/: __init__.py
rag_bench/pipelines/: base.py  hyde.py  multi_query.py  naive_rag.py  rerank.py
rag_bench/resources/configs/: rerank.yaml
rag_bench/resources/examples/qa/: toy.jsonl
rag_bench/utils/: cache.py  io.py  repro.py  resources.py
rag_bench/utils/callbacks/: usage.py
recipe/: meta.yaml
scripts/: bench.py  bench_many.py  run.py
scripts/docker/: build_gpu_test_image.sh  run_gpu_tests.sh
scripts/gcp/: build_gpu_base_image.sh  install_gpu_host.sh
src/rag_bench/: bench_cli.py  bench_many_cli.py
src/rag_bench/eval/datasets/: __init__.py
src/rag_bench/pipelines/: selector.py
src/rag_bench/providers/: base.py
src/rag_bench/providers/aws/: chat.py
src/rag_bench/providers/gcp/: embeddings.py
src/rag_bench/utils/: factories.py
src/rag_bench/vector/: base.py  matching_engine.py
tests/: test_basic.py  test_bench_cli.py  test_bench_many_cli.py  test_cli_main.py  test_cli_offline_branch.py  test_config_validation.py  test_datasets_and_hyde.py  test_imports.py  test_metrics_basic.py  test_multi_query.py  test_providers_adapters.py  test_providers_detect.py  test_report.py  test_rerank.py
tests/cloud/: test_aws_bedrock_smoke.py
tests/examples/: test_compare_two_pipelines.py
tests/gpu/: test_cache_gpu.py  test_config_gpu.py  test_datasets_empty.py  test_package_init.py  test_pipelines_base.py  test_report_gpu.py
tests/integration/: test_bench_cli_int.py  test_bench_many_cli_int.py  test_cli_int.py
